--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@
 *.exe
 *.out
 *.app
+RVisuals/.Rproj.user/D4B6EF27/sources/prop/712F7F80
+RVisuals/.Rproj.user/D4B6EF27/sources/prop/INDEX
+RVisuals/.Rproj.user/D4B6EF27/sources/s-4528E26C/3DDE6BB5
+RVisuals/.Rproj.user/D4B6EF27/sources/s-4528E26C/3DDE6BB5-contents
+RVisuals/.Rproj.user/D4B6EF27/sources/s-4528E26C/lock_file
+RVisuals/.Rproj.user/shared/notebooks/patch-chunk-names
+RVisuals/.Rproj.user/shared/notebooks/paths
+.vs/PerformanceTest/DesignTimeBuild/.dtbcache.v2
+.vs/PerformanceTest/v16/.suo
