--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ RVisuals/.Rproj.user/shared/notebooks/patch-chunk-names
 RVisuals/.Rproj.user/shared/notebooks/paths
 .vs/PerformanceTest/DesignTimeBuild/.dtbcache.v2
 .vs/PerformanceTest/v16/.suo
+RVisuals/.Rproj.user/D4B6EF27/pcs/files-pane.pper
+RVisuals/.Rproj.user/D4B6EF27/pcs/source-pane.pper
+RVisuals/.Rproj.user/D4B6EF27/pcs/windowlayoutstate.pper
+RVisuals/.Rproj.user/D4B6EF27/pcs/workbench-pane.pper
+RVisuals/.Rproj.user/D4B6EF27/rmd-outputs
+RVisuals/.Rhistory
+RVisuals/.Rproj.user/D4B6EF27/saved_source_markers
+RVisuals/.Rproj.user/D4B6EF27/sources/per/t/3DDE6BB5
+RVisuals/.Rproj.user/D4B6EF27/sources/per/t/3DDE6BB5-contents
