update visualization code

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ RVisuals/.Rhistory
 RVisuals/.Rproj.user/D4B6EF27/saved_source_markers
 RVisuals/.Rproj.user/D4B6EF27/sources/per/t/3DDE6BB5
 RVisuals/.Rproj.user/D4B6EF27/sources/per/t/3DDE6BB5-contents
+.Rproj.user
